k8s/base/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: garbo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: garbo
  template:
    metadata:
      labels:
        app: garbo
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - image: ghcr.io/klimatbyran/garbo
          resources:
            requests:
              memory: '800Mi'
            limits:
              memory: '1.5Gi'
          name: garbo
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
