k8s/base/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - image: ghcr.io/klimatbyran/garbo
          resources:
            requests:
              cpu: 800m
              memory: 1Gi
          command: ['npm', 'run', 'workers']
          name: worker
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
