k8s/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: garbo
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: garbo
