k8s/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garbo
  annotations:
    kubernetes.io/ingress.class: 'gce'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - api.klimatkollen.se
      secretName: api-klimatkollen-se-tls

  rules:
    - host: api.klimatkollen.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: garbo
                port:
                  number: 80
